--- a/model/test.ipynb
+++ b/model/test.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,12 +20,26 @@
     "\n",
     "class StoryData(Dataset):\n",
     "    def __init__(self, path, tokenizer):\n",
-    "        self.data = json.load(open(path, 'r'))\n",
+    "        self.data = open(path, 'r')\n",
+    "        \n",
+    "        self.dataa = []\n",
+    "        count = 0\n",
+    "        curr = \"\"\n",
+    "        for line in self.data:\n",
+    "            if line == \"\": break\n",
+    "            if line == \"<|endoftext|>\\n\":\n",
+    "                self.dataa.append(curr)\n",
+    "                curr = \"\"\n",
+    "                count += 1\n",
+    "                if count == 100: break\n",
+    "                continue\n",
+    "            \n",
+    "            curr += line.strip() + \" \"\n",
+    "\n",
     "        self.X = []      \n",
     "\n",
-    "        for i in self.data:\n",
-    "            for j in i['dialog']:\n",
-    "                self.X.append(j['text'])\n",
+    "        for i in self.dataa:\n",
+    "                self.X.append(i)\n",
     "        \n",
     "        for idx, i in enumerate(self.X):\n",
     "            try:\n",
@@ -33,10 +47,10 @@
     "            except:\n",
     "                break \n",
     "        \n",
-    "        self.X = self.X[:100]\n",
-    "        print(self.X[0])\n",
+    "        self.X = self.X[:1000]\n",
+    "        # print(self.X[0])\n",
     "        \n",
-    "        self.X_encoded = tokenizer(self.X, max_length=40, truncation=True, padding=\"max_length\", return_tensors=\"pt\")\n",
+    "        self.X_encoded = tokenizer(self.X, max_length=60, truncation=True, padding=\"max_length\", return_tensors=\"pt\")\n",
     "        self.input_ids = self.X_encoded['input_ids']\n",
     "        self.attention_mask = self.X_encoded['attention_mask']\n",
     "        \n",
@@ -49,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -58,13 +72,6 @@
      "text": [
       "/home/wahid/.conda/envs/bolt2/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<bos> I love iphone! i just bought new iphone!<bot>: Thats good for you, i'm not very into new tech <eos>\n"
      ]
     }
    ],
@@ -92,7 +99,7 @@
     "    inp = tokenizer(inp, return_tensors=\"pt\")\n",
     "    X = inp['input_ids'].to(device)\n",
     "    a = inp['attention_mask'].to(device)\n",
-    "    output = model.generate(X, attention_mask=a)\n",
+    "    output = model.generate(X, attention_mask=a, max_new_tokens=100)\n",
     "    output = tokenizer.decode(output[0])\n",
     "    return output\n",
     "\n",
@@ -108,7 +115,7 @@
     "model.resize_token_embeddings(len(tokenizer))\n",
     "model = model.to(device)\n",
     "\n",
-    "storyData = StoryData(\"chat_data.json\", tokenizer)\n",
+    "storyData = StoryData(\"TinyStoriesV2-GPT4-train.txt\", tokenizer)\n",
     "storyData = DataLoader(storyData, batch_size=32)\n",
     "\n",
     "optim = Adam(model.parameters(), lr=1e-3)"
@@ -116,19 +123,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:32<00:00,  3.26s/it]\n"
+      "100%|██████████| 10/10 [00:43<00:00,  4.39s/it]\n"
      ]
     }
    ],
    "source": [
     "train(storyData, model, optim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bot: <bos> once upon <bot>:   Lila and Ben were playing pirates in the backyard. They had a big box that is their ship and a map that shows where the treasure is. They also have a skull that they found in the garage. It is open and has no teeth. \"Ahoy, matey!\" said. \"Ahoy, matey!\" \"I want to help you!\" said. \"Ahoy, matey!\" \"I promise you!\" \"I promise you!\" \"I promise you promise you!\" \"\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    inp = input(\"You: \")\n",
+    "    print(\"Bot:\", infer(inp))"
    ]
   }
  ],
