--- a/model/test.ipynb
+++ b/model/test.ipynb
@@ -106,11 +106,9 @@
     "device = \"cuda\" if torch.cuda.is_available() else \"mps\" if torch.backends.mps.is_available() else \"cpu\"\n",
     "\n",
     "tokenizer = GPT2Tokenizer.from_pretrained('gpt2')\n",
-    "tokenizer.add_special_tokens({\"pad_token\": \"<pad>\",\n",
-    "                              \"bos_token\": \"<bos>\",\n",
+    "tokenizer.add_special_tokens({\"bos_token\": \"<bos>\",\n",
     "                              \"eos_token\": \"<eos>\"})\n",
-    "tokenizer.add_tokens([\"<bot>:\"])\n",
-    "\n",
+    "tokenizer.pad_token = tokenizer.eos_token\n",
     "model = GPT2LMHeadModel.from_pretrained('gpt2')\n",
     "model.resize_token_embeddings(len(tokenizer))\n",
     "model = model.to(device)\n",
@@ -130,7 +128,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:43<00:00,  4.39s/it]\n"
+      "100%|██████████| 10/10 [00:37<00:00,  3.70s/it]\n"
      ]
     }
    ],
@@ -154,7 +152,84 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bot: <bos> once upon <bot>:   Lila and Ben were playing pirates in the backyard. They had a big box that is their ship and a map that shows where the treasure is. They also have a skull that they found in the garage. It is open and has no teeth. \"Ahoy, matey!\" said. \"Ahoy, matey!\" \"I want to help you!\" said. \"Ahoy, matey!\" \"I promise you!\" \"I promise you!\" \"I promise you promise you!\" \"\n"
+      "Bot: <bos> jack and lily<bot>: ily in the garden. They found a big box that was their toy car. They found a box that was their toy car. It was a box that was open and has no teeth. It was open and has no teeth. It was open and has no teeth. It was open and has no teeth. \"Ahoy, matey!\" said, \"Ahoy, matey!\" \"Ahoy, matey!\" \"Ahoy, matey!\" \"Ahoy, matey!\" \"\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bot: <bos> <bot>:  Lily and Ben were playing in the backyard. They had a big box that is their ship and a map that shows where the treasure is. They also have a skull that they found in the garage. Lily and Ben wanted to find it in the garage. They found a skull that they found in the garage. It is open and has no teeth. \"Ahoy, matey!\" Lily asked. \"Ahoy, matey!\" Lily asked, \"Ahoy, matey!\" Lily asked,\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bot: <bos> <bot>:  Lily and Ben were playing in the backyard. They had a big box that is their ship and a map that shows where the treasure is. They also have a skull that they found in the garage. Lily and Ben wanted to find it in the garage. They found a skull that they found in the garage. It is open and has no teeth. \"Ahoy, matey!\" Lily asked. \"Ahoy, matey!\" Lily asked, \"Ahoy, matey!\" Lily asked,\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bot: <bos> <bot>:  Lily and Ben were playing in the backyard. They had a big box that is their ship and a map that shows where the treasure is. They also have a skull that they found in the garage. Lily and Ben wanted to find it in the garage. They found a skull that they found in the garage. It is open and has no teeth. \"Ahoy, matey!\" Lily asked. \"Ahoy, matey!\" Lily asked, \"Ahoy, matey!\" Lily asked,\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bot: <bos> <bot>:  Lily and Ben were playing in the backyard. They had a big box that is their ship and a map that shows where the treasure is. They also have a skull that they found in the garage. Lily and Ben wanted to find it in the garage. They found a skull that they found in the garage. It is open and has no teeth. \"Ahoy, matey!\" Lily asked. \"Ahoy, matey!\" Lily asked, \"Ahoy, matey!\" Lily asked,\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bot: <bos> <bot>:  Lily and Ben were playing in the backyard. They had a big box that is their ship and a map that shows where the treasure is. They also have a skull that they found in the garage. Lily and Ben wanted to find it in the garage. They found a skull that they found in the garage. It is open and has no teeth. \"Ahoy, matey!\" Lily asked. \"Ahoy, matey!\" Lily asked, \"Ahoy, matey!\" Lily asked,\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
      ]
     }
    ],
@@ -181,7 +256,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.1.0"
   }
  },
  "nbformat": 4,
