--- a/model/test.ipynb
+++ b/model/test.ipynb
@@ -2,16 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"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\"\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +22,7 @@
     "                self.dataa.append(curr)\n",
     "                curr = \"\"\n",
     "                count += 1\n",
-    "                if count == 100: break\n",
+    "                # if count == 100: break\n",
     "                continue\n",
     "            \n",
     "            curr += line.strip() + \" \"\n",
@@ -47,7 +38,7 @@
     "            except:\n",
     "                break \n",
     "        \n",
-    "        self.X = self.X[:1000]\n",
+    "        self.X = self.X[:2000]\n",
     "        # print(self.X[0])\n",
     "        \n",
     "        self.X_encoded = tokenizer(self.X, max_length=60, truncation=True, padding=\"max_length\", return_tensors=\"pt\")\n",
@@ -63,18 +54,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/wahid/.conda/envs/bolt2/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from transformers import GPT2Tokenizer, GPT2LMHeadModel\n",
     "from torch.optim import Adam\n",
@@ -121,14 +103,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:37<00:00,  3.70s/it]\n"
+      "100%|██████████| 10/10 [04:25<00:00, 26.55s/it]\n"
      ]
     }
    ],
@@ -256,7 +238,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.0"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
