refactor: IPEX markdown

--- a/model/Final.ipynb
+++ b/model/Final.ipynb
@@ -11,6 +11,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a54dde55",
+   "metadata": {},
+   "source": [
+    "## This notebook was run on an Intel VM instance(20GB diskspace, 4th Gen Xeon Processor with 8 cores), thanks to IDC"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "69fef22e",
@@ -218,7 +226,7 @@
    "id": "b5372198",
    "metadata": {},
    "source": [
-    "### As we can see, the time taken to train a GPT2 model with a custom dataset, was significantly faster using Intel's PyTorch Extensions, thanks to OneAPI."
+    "### As we can see, the time taken to train a GPT2 model with a custom dataset, was significantly faster using Intel's PyTorch Extensions, thanks to OneAPI. One average, IPEX was 25% faster during model training, with the dataset we used."
    ]
   },
   {
